--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          }
         </style>
     -->
-      <h2 id="title" color:blue >aprendiendo css</h2>
+      <h2 id="title" >aprendiendo css</h2>
       <p p-large class="color">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Error laboriosam officiis, expedita perspiciatis architecto voluptatibus tempora repudiandae aspernatur possimus eos! Ducimus ipsa voluptatibus hic tempora ratione ullam inventore, nobis porro?
       </p>
